--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/joseduardo15062005/employees-manager#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^10.0.0",
     "inquirer": "^8.2.0",
     "mysql2": "^2.3.2"
